<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="408dp"
        android:layout_height="95dp"
        android:layout_marginTop="55dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@null"
            app:srcCompat="@mipmap/gas_can_foreground" />

        <TextView
            android:id="@+id/title_app"
            android:layout_width="248dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/gasoline_calculator"
            android:textAlignment="center"
            android:textSize="34sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@null"
            app:srcCompat="@mipmap/gas_can_foreground" />

    </LinearLayout>

    <TableLayout
        android:layout_width="413dp"
        android:layout_height="564dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="115dp">

            <TextView
                android:id="@+id/distance_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:text="@string/distance"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/Distance_editTextNumber"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/please_enter_the_distance"
                android:inputType="number"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/cost_gallon_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:text="@string/cost_per_gallon"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/Cost_edit"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/please_enter_the_cost_per_gallon"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/highway_mpg_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:text="@string/highway_mpg"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/MPGeditTextNumber"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/please_enter_the_vehicle_milage"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/aggressive_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_marginStart="5dp"
                android:paddingTop="5dp"
                android:text="@string/aggressive_driver"
                android:textAlignment="center"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/need_ac_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:text="@string/need_a_c"
                android:textAlignment="center"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/radio_Group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes_button" />

                <RadioButton
                    android:id="@+id/radioButtonNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />
            </RadioGroup>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/road_type_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:text="@string/road_type"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:entries="@array/typesRoad" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/averageSpeed_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:text="@string/average_speed"
                android:textAlignment="center"
                android:textSize="24sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <SeekBar
                    android:id="@+id/seekBar"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="7"
                    android:progress="0"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/Avg_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_35"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/seekBar"
                    app:layout_constraintStart_toStartOf="@+id/seekBar"
                    app:layout_constraintTop_toBottomOf="@+id/seekBar" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_calc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_span="2"
                android:text="@string/calculate" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/FinalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_span="2"
                android:text="@string/you_ll_need_to_spend_this_much_on_a_round_trip"
                android:textAlignment="center"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/resultCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/_0_00"
                android:textAlignment="center"
                android:textSize="34sp" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>